syntax = "proto3";

option go_package = "/keeper/v1";

package keeper.v1;

import "buf/validate/validate.proto";

service KeeperServiceV1{
  rpc RegisterV1(RegisterRequestV1) returns (RegisterResponseV1);
  rpc LoginV1(LoginRequestV1) returns (LoginResponseV1);
  rpc ListItemV1(ListItemRequestV1) returns (ListItemResponseV1);
  rpc SetItemV1(SetItemRequestV1) returns (SetItemResponseV1);
}

message RegisterRequestV1{
  string email = 1 [(buf.validate.field).string.email = true];
  string password = 2 [(buf.validate.field).string = { min_len: 8 }];
}

message RegisterResponseV1{
  int64 user_id = 1;
}

message LoginRequestV1{
  string email = 1[(buf.validate.field).string.email = true];
  string password = 2 [(buf.validate.field).string = { min_len: 8 }];
}

message LoginResponseV1{
  string token = 1;
}

message ListItemRequestV1 {
  int64 since = 1;
}

message Item {
  enum Type {
    PASSWORD = 0;
    TEXT = 1;
    BINARY = 2;
    CARD = 3;
  }

  string id   = 1;
  string name = 2;
  Type type = 3;
  bytes value = 4;
  int64 server_updated_at = 5;
  bool is_deleted = 6;
}

message ListItemResponseV1 {
  repeated Item items = 1;
}

message SetItemRequestV1 {
  Item item = 1;
}

message SetItemResponseV1 {
  int64 server_updated_at = 1;
}